<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.identity.LoginFragment">



      <LinearLayout
          android:id="@+id/linearLayout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="20dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.11">

          <View
              android:id="@+id/login_snakbar_view"
              android:layout_width="match_parent"
              android:layout_height="17dp"
              android:visibility="visible" />

          <TextView
              android:id="@+id/textView"
              style="@style/BoldHeaderStyle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="18dp"
              android:text="@string/login_greeting"
              android:textColor="@color/black" />

          <TextView
              android:id="@+id/textView2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/login_user_msg"
              android:textSize="16sp" />

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/outlinedTextFieldEmailLogin"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="18dp"
              app:helperTextTextColor="#FF0000"
              android:hint="@string/email"
              app:errorEnabled="true">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/login_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:maxLines="1"
                  android:lines="1"
                  android:singleLine="true"/>

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/outlinedTextFieldPassLogin"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:hint="@string/password"

              app:helperTextTextColor="#FF0000"

              app:endIconMode="password_toggle"
              app:errorEnabled="true">

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/login_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword" />

          </com.google.android.material.textfield.TextInputLayout>

          <TextView
              android:id="@+id/forget_password_textView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="right"
              android:text="@string/forget_password" />

          <CheckBox
              android:id="@+id/rememberMe"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Remember Me" />

          <Button
              android:id="@+id/login_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:layout_marginBottom="18dp"
              android:text="@string/login" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/textView4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/question_dont_have_account" />

              <TextView
                  android:id="@+id/signup_textView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="6dp"
                  android:text="@string/register"
                  android:textColor="@android:color/holo_blue_light" />
          </LinearLayout>


      </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>